alignment issues fixed

--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ ul {
     justify-content: flex-start;
   }
 
-  header {
+  .main-content {
     margin-top: 5.6rem;
   }
 }
